Fixed UI shifting after selection.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -560,7 +560,7 @@ input, button, select, textarea
   .selection-list-item
     display inline-block
     max-width 100%
-    margin 1px 3px 1px 0
+    margin 1px 3px 0 0
     border 1px solid #d4d4d4
     border-radius 4px
     padding 2px 0 2px 3px
